// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <AppearanceListing /> when all props are defined matches snapshot 1`] = `
<article
  class="AppearanceListing isCondensed"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - 123 Address"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--audience"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Audience:
          </span>
           
          <span
            class="Meta--value"
          >
            18+
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $20
            </span>
            <span
              class="PriceRange--separator"
            >
              –
            </span>
            <span
              class="Price PriceRange--max"
            >
              $40
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when cancelled matches snapshot 1`] = `
<article
  class="AppearanceListing isCancelled"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--status"
        >
           
          <span
            class="Meta--label"
          >
            Status:
          </span>
           
          <span
            class="Meta--value"
          >
            Cancelled
          </span>
        </div>
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $0
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when only the required props are defined matches snapshot 1`] = `
<article
  class="AppearanceListing"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          />
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when postponed matches snapshot 1`] = `
<article
  class="AppearanceListing isPostponed"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--status"
        >
           
          <span
            class="Meta--label"
          >
            Status:
          </span>
           
          <span
            class="Meta--value"
          >
            Postponed
          </span>
        </div>
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $0
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when there are no sales matches snapshot 1`] = `
<article
  class="AppearanceListing"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          />
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when there are three sales matches snapshot 1`] = `
<article
  class="AppearanceListing"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $5
            </span>
            <span
              class="PriceRange--separator"
            >
              –
            </span>
            <span
              class="Price PriceRange--max"
            >
              $10
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when there are two sales matches snapshot 1`] = `
<article
  class="AppearanceListing"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $5
            </span>
            <span
              class="PriceRange--separator"
            >
              –
            </span>
            <span
              class="Price PriceRange--max"
            >
              $10
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;

exports[`[presentation] <AppearanceListing /> when there is only one sale matches snapshot 1`] = `
<article
  class="AppearanceListing"
>
  <a
    href="/appearances/"
  >
    <div
      class="AppearanceListing--details"
    >
      <header
        class="AppearanceListing--header"
      >
        <h3 />
      </header>
      <section
        class="AppearanceListing--meta"
      >
        <div
          class="Meta AppearanceListing--date"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 11H7v2h2v-2zm4 0h-2v2h2v-2zm4 0h-2v2h2v-2zm2-7h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V9h14v11z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Date:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04"
              title="4 January 2018"
            >
              4 January 2018
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--time"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm.5-13H11v6l5.25 3.15.75-1.23-4.5-2.67z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Time:
          </span>
           
          <span
            class="Meta--value"
          >
            <time
              class="DateTime"
              datetime="2018-01-04T00:00:00"
              title="12:00 am"
            >
              12:00 am
            </time>
          </span>
        </div>
        <div
          class="Meta AppearanceListing--location"
          title="Venue - undefined"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
            />
          </svg>
           
          <span
            class="Meta--label"
          >
            Location:
          </span>
           
          <span
            class="Meta--value"
          >
            Venue
          </span>
        </div>
        <div
          class="Meta AppearanceListing--price"
        >
           
          <span
            class="Meta--label"
          >
            Price:
          </span>
           
          <span
            class="Meta--value"
          >
            <span
              class="Price PriceRange--min"
            >
              $5
            </span>
          </span>
        </div>
      </section>
    </div>
    <figure
      class="Image AppearanceListing--image isLoading"
    >
      <div
        class="Image--wrapper"
      >
        <img
          alt=""
          src="Image URL"
        />
        <span
          class="Loader"
        >
          <div
            class="Loader--animation"
          >
            <span />
            <span />
            <span />
          </div>
        </span>
      </div>
    </figure>
  </a>
</article>
`;
